--- a/resources/sass/frontend/project/text/text-color.sass
+++ b/resources/sass/frontend/project/text/text-color.sass
@@ -1,6 +1,6 @@
 @import "../../../bootstrap"
 
-$colors: (white, #fff), (black, #151A1C)
+$colors: (white, #fff), (black, #151A1C), (golden, #EFB458)
 
 @each $name, $color in $colors
     +breakpoints(text-#{$name})
