--- a/resources/sass/frontend/base.sass
+++ b/resources/sass/frontend/base.sass
@@ -32,7 +32,7 @@ h1
 
 
 h2
-    font-family: Montserrat-Bold, sans-serif
+    font-family: Montserrat-Semibold, sans-serif
     font-size: 2rem
 
     @media ($breakpoint_md)
