--- a/resources/sass/frontend/project/swiper/swiper-button.sass
+++ b/resources/sass/frontend/project/swiper/swiper-button.sass
@@ -11,6 +11,7 @@
     justify-content: center !important
     background-color: #fff !important
     border-radius: 50% !important
+    color: $grey-90 !important
 
     @media ($breakpoint_sm_max)
         font-size: 16px !important
