--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -42,6 +42,7 @@ table {
   border-spacing: 0; }
 
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  position: relative; }
 
 /*# sourceMappingURL=backend.css.map */
