--- a/resources/sass/frontend/_colors.scss
+++ b/resources/sass/frontend/_colors.scss
@@ -2,7 +2,8 @@ $black-100: #000;
 $black-90: #151A1C;
 $grey-90: #3E4345;
 $grey-80: #5E6366;
-$grey-30: #C6CACC;
+$grey-30: #babec0;
+$grey-20: #F1F3F4;
 $golden-100: #EFB458;
 $golden-90: #ECBA78;
 $golden-60: #F4D5AC;
