--- a/resources/sass/frontend/_colors.scss
+++ b/resources/sass/frontend/_colors.scss
@@ -14,6 +14,7 @@ $colors-map:
 
     (grey-80, $grey-80),
     (grey-30, $grey-30),
+    (grey-20, $grey-20),
 
     (golden-100, $golden-100),
     (golden-90, $golden-90),
