--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -87937,238 +87937,238 @@ p {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 100;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Thin.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Thin.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: italic;
   font-weight: 100;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Thin.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Thin.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 200;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-ExtraLight.woff") format("woff"), url("../fonts/Montserrat/Montserrat-ExtraLight.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: italic;
   font-weight: 200;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-ExtraLight.woff") format("woff"), url("../fonts/Montserrat/Montserrat-ExtraLight.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 300;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Light.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Light.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: italic;
   font-weight: 300;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Light.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Light.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Regular.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Regular.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: italic;
   font-weight: 400;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Regular.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Regular.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 500;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Medium.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Medium.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: italic;
   font-weight: 500;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Medium.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Medium.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-SemiBold.woff") format("woff"), url("../fonts/Montserrat/Montserrat-SemiBold.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: italic;
   font-weight: 600;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-SemiBold.woff") format("woff"), url("../fonts/Montserrat/Montserrat-SemiBold.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Bold.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Bold.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: italic;
   font-weight: 700;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Bold.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Bold.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 800;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-ExtraBold.woff") format("woff"), url("../fonts/Montserrat/Montserrat-ExtraBold.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: italic;
   font-weight: 800;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-ExtraBold.woff") format("woff"), url("../fonts/Montserrat/Montserrat-ExtraBold.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 900;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Black.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Black.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Montserrat";
   font-style: italic;
   font-weight: 900;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Montserrat/Montserrat-Black.woff") format("woff"), url("../fonts/Montserrat/Montserrat-Black.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: normal;
   font-weight: 100;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Thin.woff") format("woff"), url("../fonts/Lato/Lato-Thin.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: italic;
   font-weight: 100;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Thin.woff") format("woff"), url("../fonts/Lato/Lato-Thin.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: normal;
   font-weight: 200;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-ExtraLight.woff") format("woff"), url("../fonts/Lato/Lato-ExtraLight.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: italic;
   font-weight: 200;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-ExtraLight.woff") format("woff"), url("../fonts/Lato/Lato-ExtraLight.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: normal;
   font-weight: 300;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Light.woff") format("woff"), url("../fonts/Lato/Lato-Light.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: italic;
   font-weight: 300;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Light.woff") format("woff"), url("../fonts/Lato/Lato-Light.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: normal;
   font-weight: 400;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Regular.woff") format("woff"), url("../fonts/Lato/Lato-Regular.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: italic;
   font-weight: 400;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Regular.woff") format("woff"), url("../fonts/Lato/Lato-Regular.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: normal;
   font-weight: 500;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Medium.woff") format("woff"), url("../fonts/Lato/Lato-Medium.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: italic;
   font-weight: 500;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Medium.woff") format("woff"), url("../fonts/Lato/Lato-Medium.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: normal;
   font-weight: 600;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-SemiBold.woff") format("woff"), url("../fonts/Lato/Lato-SemiBold.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: italic;
   font-weight: 600;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-SemiBold.woff") format("woff"), url("../fonts/Lato/Lato-SemiBold.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: normal;
   font-weight: 700;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Bold.woff") format("woff"), url("../fonts/Lato/Lato-Bold.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: italic;
   font-weight: 700;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Bold.woff") format("woff"), url("../fonts/Lato/Lato-Bold.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: normal;
   font-weight: 900;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Black.woff") format("woff"), url("../fonts/Lato/Lato-Black.woff2") format("woff2"); }
 
 @font-face {
   font-family: "Lato";
   font-style: italic;
   font-weight: 900;
-  font-display: fallback;
+  font-display: swap;
   src: url("../fonts/Lato/Lato-Black.woff") format("woff"), url("../fonts/Lato/Lato-Black.woff2") format("woff2"); }
 
 /* */
