--- a/resources/sass/frontend/fonts.scss
+++ b/resources/sass/frontend/fonts.scss
@@ -33,7 +33,7 @@ $icomoon: '/public/fonts/icons/fonts/icomoon';
             font-family: $font-family;
             font-style: $style;
             font-weight: $font-weight;
-            font-display: fallback;
+            font-display: swap;
             src:
                 url($folder + '/' + $font-family + '/' + $font-family + '-' + $font-name + '.woff') format('woff'),
                 url($folder + '/' + $font-family + '/' + $font-family + '-' + $font-name + '.woff2') format('woff2');
@@ -59,7 +59,7 @@ $icomoon: '/public/fonts/icons/fonts/icomoon';
             font-family: $font-family;
             font-style: $style;
             font-weight: $font-weight;
-            font-display: fallback;
+            font-display: swap;
             src:
                 url($folder + '/' + $font-family + '/' + $font-family + '-' + $font-name + '.woff') format('woff'),
                 url($folder + '/' + $font-family + '/' + $font-family + '-' + $font-name + '.woff2') format('woff2');
