--- a/resources/sass/frontend/project/cards/team-person-card/team-person-card.sass
+++ b/resources/sass/frontend/project/cards/team-person-card/team-person-card.sass
@@ -2,6 +2,10 @@
 
 .team-person-card
 
+    &:not(:last-child)
+        margin-right: 8px
+
+
     @media ($breakpoint_md_max) and ($breakpoint_md_max)
         width: 70vw !important
         max-width: 234px !important
