--- a/resources/sass/frontend/project/cards/team-person-card/team-person-card.sass
+++ b/resources/sass/frontend/project/cards/team-person-card/team-person-card.sass
@@ -1,6 +1,7 @@
 @import "../../../../bootstrap"
 
 .team-person-card
+    height: auto !important
 
     &:not(:last-child)
         margin-right: 8px
