--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -87610,6 +87610,16 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+.lazyload, .lazyloading {
+  opacity: 0;
+  transition: opacity 3000ms; }
+
+.lazyloaded {
+  opacity: 1; }
+
+/* */
+/* CONTAINERS */
+/* */
 .swiper-button {
   width: 32px !important;
   height: 32px !important;
@@ -87890,6 +87900,19 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+.team-person-card {
+  height: auto !important; }
+  @media (max-width: 991px) and (max-width: 991px) {
+    .team-person-card {
+      width: 70vw !important;
+      max-width: 234px !important; } }
+  @media (min-width: 1200px) {
+    .team-person-card {
+      width: 210px !important; } }
+
+/* */
+/* CONTAINERS */
+/* */
 .pop-styles-card {
   background-color: #F4D5AC;
   overflow: hidden;
@@ -87915,19 +87938,6 @@ p {
     opacity: 0; }
   .pop-styles-card:hover .overlay {
     opacity: 1; }
-
-/* */
-/* CONTAINERS */
-/* */
-.team-person-card {
-  height: auto !important; }
-  @media (max-width: 991px) and (max-width: 991px) {
-    .team-person-card {
-      width: 70vw !important;
-      max-width: 234px !important; } }
-  @media (min-width: 1200px) {
-    .team-person-card {
-      width: 210px !important; } }
 
 /* */
 /* CONTAINERS */
