--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -87612,10 +87612,11 @@ p {
 /* */
 .lazyload, .lazyloading {
   opacity: 0;
-  transition: opacity 3000ms; }
+  transition: opacity 300ms; }
 
 .lazyloaded {
-  opacity: 1; }
+  opacity: 1;
+  transition: opacity 300ms; }
 
 /* */
 /* CONTAINERS */
@@ -87900,21 +87901,7 @@ p {
 /* */
 /* CONTAINERS */
 /* */
-.team-person-card {
-  height: auto !important; }
-  @media (max-width: 991px) and (max-width: 991px) {
-    .team-person-card {
-      width: 70vw !important;
-      max-width: 234px !important; } }
-  @media (min-width: 1200px) {
-    .team-person-card {
-      width: 210px !important; } }
-
-/* */
-/* CONTAINERS */
-/* */
 .pop-styles-card {
-  background-color: #F4D5AC;
   overflow: hidden;
   transition: all 0.2s; }
   @media (max-width: 767px) {
@@ -87930,14 +87917,39 @@ p {
       width: calc(100vw / 5 - 8px) !important;
       height: calc((100vw / 5 - 8px) * 1.3) !important; } }
   .pop-styles-card img {
-    transition: all 0.2s; }
+    transition: transform 0.35s ease-in-out, opacity 0.3s; }
   .pop-styles-card:hover img {
     transform: scale(1.1); }
   .pop-styles-card .overlay {
-    transition: all 0.2s;
+    transition: opacity 0.35s ease-in-out;
     opacity: 0; }
   .pop-styles-card:hover .overlay {
     opacity: 1; }
+
+/* */
+/* CONTAINERS */
+/* */
+.team-person-card {
+  height: auto !important; }
+  @media (max-width: 991px) {
+    .team-person-card {
+      width: 70vw !important;
+      max-width: 234px !important; } }
+  @media (min-width: 992px) {
+    .team-person-card {
+      width: 185px !important; } }
+  @media (min-width: 1200px) {
+    .team-person-card {
+      width: 210px !important; } }
+  .team-person-card img {
+    display: block; }
+    @media (max-width: 991px) and (max-width: 991px) {
+      .team-person-card img {
+        height: calc(70vw / .6) !important;
+        max-height: calc(234px / .6) !important; } }
+    @media (min-width: 992px) {
+      .team-person-card img {
+        height: calc(185px / .6) !important; } }
 
 /* */
 /* CONTAINERS */
