--- a/resources/sass/frontend/framework/spacing/margin.sass
+++ b/resources/sass/frontend/framework/spacing/margin.sass
@@ -37,3 +37,9 @@
 +breakpoints(my-auto)
     margin-top: auto
     margin-bottom: auto
+
++breakpoints(ml-auto)
+    margin-left: auto
+
++breakpoints(mr-auto)
+    margin-right: auto
