--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -88028,6 +88028,7 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+/* uncss:ignore start */
 .form_order-design {
   background-position: center center;
   background-size: cover; }
@@ -88036,9 +88037,12 @@ p {
   .form_order-design.no-webp {
     background-image: url("../img/backgrounds/form_order-design.jpg"); }
 
+/* uncss:ignore end */
+
 /* */
 /* CONTAINERS */
 /* */
+/* uncss:ignore start */
 .bg-title-screen--home {
   background-size: cover;
   background-position: center center; }
@@ -88066,6 +88070,8 @@ p {
   @media (min-width: 1200px) {
     .bg-title-screen--home.no-webp {
       background-image: url("../img/backgrounds/title-screen/home.jpg"); } }
+
+/* uncss:ignore end */
 
 /* */
 /* CONTAINERS */
