--- a/resources/sass/frontend/project/backgrounds/form_order-design/form_order-design.sass
+++ b/resources/sass/frontend/project/backgrounds/form_order-design/form_order-design.sass
@@ -1,5 +1,7 @@
 @import "../../../../bootstrap"
 
+/* uncss:ignore start */
+
 .form_order-design
     background-position: center center
     background-size: cover
@@ -9,3 +11,5 @@
 
     &.no-webp
         background-image: url('../img/backgrounds/form_order-design.jpg')
+
+/* uncss:ignore end */
