--- a/resources/sass/frontend/project/backgrounds/title-screen/home.sass
+++ b/resources/sass/frontend/project/backgrounds/title-screen/home.sass
@@ -1,5 +1,7 @@
 @import "../../../../bootstrap"
 
+/* uncss:ignore start */
+
 .bg-title-screen--home
     background-size: cover
     background-position: center center
@@ -29,3 +31,5 @@
 
         @media ($breakpoint_xl)
             background-image: url('../img/backgrounds/title-screen/home.jpg')
+
+/* uncss:ignore end */
