--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -46,7 +46,7 @@ table {
   position: relative; }
 
 html, body {
-  width: 100vw;
+  width: 100%;
   overflow-x: hidden; }
 
 html {
@@ -7730,6 +7730,143 @@ p {
 @media (min-width: 768px) and (max-width: 1199px) {
   .md-lg\:flex-col-reverse {
     flex-direction: column-reverse; } }
+
+/* */
+/* CONTAINERS */
+/* */
+.flex-wrap {
+  flex-wrap: wrap; }
+
+@media (max-width: 374px) {
+  .xs\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 1200px) {
+  .xl\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 1366px) {
+  .xl2\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 1440px) {
+  .xl3\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (max-width: 991px) {
+  .xs-md\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 768px) {
+  .md-xl\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:flex-wrap {
+    flex-wrap: wrap; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:flex-wrap {
+    flex-wrap: wrap; } }
+
+.flex-nowrap {
+  flex-wrap: nowrap; }
+
+@media (max-width: 374px) {
+  .xs\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 1200px) {
+  .xl\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 1366px) {
+  .xl2\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 1440px) {
+  .xl3\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (max-width: 991px) {
+  .xs-md\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 768px) {
+  .md-xl\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:flex-nowrap {
+    flex-wrap: nowrap; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:flex-nowrap {
+    flex-wrap: nowrap; } }
 
 /* */
 /* CONTAINERS */
@@ -87767,6 +87904,13 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+@media (max-width: 991px) {
+  .swiper-button-disabled {
+    opacity: .1 !important; } }
+
+/* */
+/* CONTAINERS */
+/* */
 .swiper-button {
   width: 32px !important;
   height: 32px !important;
@@ -88028,50 +88172,29 @@ p {
 /* */
 /* CONTAINERS */
 /* */
-/* uncss:ignore start */
 .form_order-design {
   background-position: center center;
-  background-size: cover; }
-  .form_order-design.webp {
-    background-image: url("../img/backgrounds/form_order-design.webp"); }
-  .form_order-design.no-webp {
-    background-image: url("../img/backgrounds/form_order-design.jpg"); }
-
-/* uncss:ignore end */
+  background-size: cover;
+  background-image: url("../img/backgrounds/form_order-design.jpg"); }
 
 /* */
 /* CONTAINERS */
 /* */
-/* uncss:ignore start */
 .bg-title-screen--home {
   background-size: cover;
   background-position: center center; }
   @media (max-width: 767px) {
-    .bg-title-screen--home.webp {
-      background-image: url("../img/backgrounds/title-screen/home_sm@2.webp"); } }
-  @media (min-width: 768px) {
-    .bg-title-screen--home.webp {
-      background-image: url("../img/backgrounds/title-screen/home_md@2.webp"); } }
-  @media (min-width: 992px) {
-    .bg-title-screen--home.webp {
-      background-image: url("../img/backgrounds/title-screen/home_lg@1.5.webp"); } }
-  @media (min-width: 1200px) {
-    .bg-title-screen--home.webp {
-      background-image: url("../img/backgrounds/title-screen/home.webp"); } }
-  @media (max-width: 767px) {
-    .bg-title-screen--home.no-webp {
+    .bg-title-screen--home {
       background-image: url("../img/backgrounds/title-screen/home_sm@2.jpg"); } }
   @media (min-width: 768px) {
-    .bg-title-screen--home.no-webp {
+    .bg-title-screen--home {
       background-image: url("../img/backgrounds/title-screen/home_md@2.jpg"); } }
   @media (min-width: 992px) {
-    .bg-title-screen--home.no-webp {
+    .bg-title-screen--home {
       background-image: url("../img/backgrounds/title-screen/home_lg@1.5.jpg"); } }
   @media (min-width: 1200px) {
-    .bg-title-screen--home.no-webp {
+    .bg-title-screen--home {
       background-image: url("../img/backgrounds/title-screen/home.jpg"); } }
-
-/* uncss:ignore end */
 
 /* */
 /* CONTAINERS */
@@ -88100,6 +88223,18 @@ p {
     opacity: 0; }
   .pop-styles-card:hover .overlay {
     opacity: 1; }
+
+/* */
+/* CONTAINERS */
+/* */
+@media (min-width: 992px) and (max-width: 1199px) {
+  .portfolio-item-card {
+    width: 768px !important;
+    height: calc(768px / 1.6) !important; } }
+
+@media (min-width: 1200px) {
+  .portfolio-item-card {
+    width: calc((100% - 24px) / 4) !important; } }
 
 /* */
 /* CONTAINERS */
