--- a/resources/sass/frontend/project/cards/pop-styles-card/pop-styles-card.sass
+++ b/resources/sass/frontend/project/cards/pop-styles-card/pop-styles-card.sass
@@ -1,23 +1,24 @@
 @import "../../../../bootstrap"
 
 .pop-styles-card
+    $ratio: 1.3
     overflow: hidden
     transition: all $duration_fast
 
     @media ($breakpoint_sm_max)
         $width: 270px
         width: $width !important
-        height: #{$width * 1.3} !important
+        height: #{$width * $ratio} !important
 
 
     @media ($breakpoint_md)
         $width: 270px
         width: $width !important
-        height: #{$width * 1.3} !important
+        height: #{$width * $ratio} !important
 
     @media ($breakpoint_xl)
         width: calc(100vw / 5 - 8px) !important
-        height: calc((100vw / 5 - 8px) * 1.3) !important
+        height: calc((100vw / 5 - 8px) * #{$ratio}) !important
 
 
 
