--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -84591,6 +84591,679 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+.ls-1 {
+  letter-spacing: 0.01em; }
+
+@media (max-width: 374px) {
+  .xs\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 1200px) {
+  .xl\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 1366px) {
+  .xl2\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 1440px) {
+  .xl3\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (max-width: 991px) {
+  .xs-md\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 768px) {
+  .md-xl\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:ls-1 {
+    letter-spacing: 0.01em; } }
+
+.ls-2 {
+  letter-spacing: 0.02em; }
+
+@media (max-width: 374px) {
+  .xs\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 1200px) {
+  .xl\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 1366px) {
+  .xl2\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 1440px) {
+  .xl3\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (max-width: 991px) {
+  .xs-md\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 768px) {
+  .md-xl\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:ls-2 {
+    letter-spacing: 0.02em; } }
+
+.ls-3 {
+  letter-spacing: 0.03em; }
+
+@media (max-width: 374px) {
+  .xs\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 1200px) {
+  .xl\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 1366px) {
+  .xl2\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 1440px) {
+  .xl3\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (max-width: 991px) {
+  .xs-md\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 768px) {
+  .md-xl\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:ls-3 {
+    letter-spacing: 0.03em; } }
+
+.ls-4 {
+  letter-spacing: 0.04em; }
+
+@media (max-width: 374px) {
+  .xs\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 1200px) {
+  .xl\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 1366px) {
+  .xl2\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 1440px) {
+  .xl3\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (max-width: 991px) {
+  .xs-md\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 768px) {
+  .md-xl\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:ls-4 {
+    letter-spacing: 0.04em; } }
+
+.ls-5 {
+  letter-spacing: 0.05em; }
+
+@media (max-width: 374px) {
+  .xs\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 1200px) {
+  .xl\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 1366px) {
+  .xl2\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 1440px) {
+  .xl3\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (max-width: 991px) {
+  .xs-md\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 768px) {
+  .md-xl\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:ls-5 {
+    letter-spacing: 0.05em; } }
+
+.ls-6 {
+  letter-spacing: 0.06em; }
+
+@media (max-width: 374px) {
+  .xs\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 1200px) {
+  .xl\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 1366px) {
+  .xl2\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 1440px) {
+  .xl3\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (max-width: 991px) {
+  .xs-md\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 768px) {
+  .md-xl\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:ls-6 {
+    letter-spacing: 0.06em; } }
+
+.ls-7 {
+  letter-spacing: 0.07em; }
+
+@media (max-width: 374px) {
+  .xs\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 1200px) {
+  .xl\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 1366px) {
+  .xl2\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 1440px) {
+  .xl3\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (max-width: 991px) {
+  .xs-md\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 768px) {
+  .md-xl\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:ls-7 {
+    letter-spacing: 0.07em; } }
+
+.ls-8 {
+  letter-spacing: 0.08em; }
+
+@media (max-width: 374px) {
+  .xs\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 1200px) {
+  .xl\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 1366px) {
+  .xl2\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 1440px) {
+  .xl3\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (max-width: 991px) {
+  .xs-md\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 768px) {
+  .md-xl\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:ls-8 {
+    letter-spacing: 0.08em; } }
+
+.ls-9 {
+  letter-spacing: 0.09em; }
+
+@media (max-width: 374px) {
+  .xs\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 1200px) {
+  .xl\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 1366px) {
+  .xl2\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 1440px) {
+  .xl3\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (max-width: 991px) {
+  .xs-md\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 768px) {
+  .md-xl\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:ls-9 {
+    letter-spacing: 0.09em; } }
+
+.ls-10 {
+  letter-spacing: 0.1em; }
+
+@media (max-width: 374px) {
+  .xs\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 1200px) {
+  .xl\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 1366px) {
+  .xl2\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 1440px) {
+  .xl3\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (max-width: 991px) {
+  .xs-md\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 768px) {
+  .md-xl\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 992px) {
+  .lg-xl\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .md\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .lg\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 375px) and (max-width: 991px) {
+  .sm-md\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:ls-10 {
+    letter-spacing: 0.1em; } }
+
+/* */
+/* CONTAINERS */
+/* */
 .lh-100 {
   line-height: 100%; }
 
@@ -87957,7 +88630,8 @@ p {
 /* CONTAINERS */
 /* */
 .swiper-wrapper {
-  height: auto !important; }
+  height: auto !important;
+  box-sizing: border-box !important; }
 
 /* */
 /* CONTAINERS */
@@ -88199,6 +88873,24 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+@media (max-width: 767px) {
+  .eshl-feature-card {
+    width: 70vw !important; } }
+
+@media (min-width: 768px) {
+  .eshl-feature-card {
+    width: 320px !important; } }
+
+@media (min-width: 1200px) {
+  .eshl-feature-card {
+    width: 370px !important; } }
+
+.eshl-feature-card img {
+  border-radius: 10px; }
+
+/* */
+/* CONTAINERS */
+/* */
 .pop-styles-card {
   overflow: hidden;
   transition: all 0.2s; }
@@ -88244,22 +88936,22 @@ p {
   @media (max-width: 991px) {
     .team-person-card {
       width: 70vw !important;
-      max-width: 234px !important; } }
+      max-width: 234px !important; }
+      .team-person-card img {
+        height: calc(70vw / .6) !important; } }
   @media (min-width: 992px) {
     .team-person-card {
-      width: 185px !important; } }
-  @media (min-width: 1200px) {
-    .team-person-card {
-      width: 210px !important; } }
-  .team-person-card img {
-    display: block; }
-    @media (max-width: 991px) and (max-width: 991px) {
-      .team-person-card img {
-        height: calc(70vw / .6) !important;
-        max-height: calc(234px / .6) !important; } }
-    @media (min-width: 992px) {
+      width: 185px !important; }
       .team-person-card img {
         height: calc(185px / .6) !important; } }
+  @media (min-width: 1200px) {
+    .team-person-card {
+      width: 210px !important; }
+      .team-person-card img {
+        height: calc(210px / .6) !important; } }
+  .team-person-card img {
+    display: block;
+    border-radius: 3px; }
 
 /* */
 /* CONTAINERS */
@@ -90404,28 +91096,28 @@ p {
 /* */
 /* CONTAINERS */
 /* */
-.bg\:black-100 {
+.bg-black-100 {
   background-color: #000; }
 
-.bg\:black-90 {
+.bg-black-90 {
   background-color: #151A1C; }
 
-.bg\:grey-80 {
+.bg-grey-80 {
   background-color: #5E6366; }
 
-.bg\:grey-30 {
+.bg-grey-30 {
   background-color: #babec0; }
 
-.bg\:grey-20 {
+.bg-grey-20 {
   background-color: #F1F3F4; }
 
-.bg\:golden-100 {
+.bg-golden-100 {
   background-color: #EFB458; }
 
-.bg\:golden-90 {
+.bg-golden-90 {
   background-color: #ECBA78; }
 
-.bg\:golden-60 {
+.bg-golden-60 {
   background-color: #F4D5AC; }
 
 .bg-gradient-dark {
