--- a/resources/sass/frontend/project/cards/team-person-card/team-person-card.sass
+++ b/resources/sass/frontend/project/cards/team-person-card/team-person-card.sass
@@ -5,26 +5,30 @@
 
 
     @media ($breakpoint_md_max)
-        width: 70vw !important
+        $width: 70vw
+        width: $width !important
         max-width: 234px !important
 
+        & img
+            height: calc(#{$width} / .6) !important
+            
 
     @media ($breakpoint_lg)
-        width: 185px !important
+        $width: 185px
+        width: $width !important
+
+        & img
+            height: calc(#{$width} / .6) !important
 
 
     @media ($breakpoint_xl)
-        width: 210px !important
+        $width: 210px
+        width: $width !important
+
+        & img
+            height: calc(#{$width} / .6) !important
 
 
     & img
         display: block
-
-
-        @media ($breakpoint_md_max) and ($breakpoint_md_max)
-            height: calc(70vw / .6) !important
-            max-height: calc(234px / .6) !important
-
-
-        @media ($breakpoint_lg)
-            height: calc(185px / .6) !important
+        border-radius: 3px
