--- a/resources/sass/_mixins.sass
+++ b/resources/sass/_mixins.sass
@@ -32,11 +32,12 @@
 
 
 @mixin overlay()
-  position: absolute
-  top: 0
-  bottom: 0
-  left: 0
-  right: 0
+    content: ''
+    position: absolute
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
 
 
 @mixin breakpoints($class)
