--- a/resources/sass/frontend/project/cards/service-card/services-card--houeses.sass
+++ b/resources/sass/frontend/project/cards/service-card/services-card--houeses.sass
@@ -20,5 +20,5 @@
         background-image: url('../img/service-cards/houses_lg@1.jpg')
 
 
-    @media ($breakpoint_xl_max)
+    @media ($breakpoint_xl)
         background-image: url('../img/service-cards/houses_xl@1.jpg')
