--- a/resources/sass/frontend/framework/sizing/width.sass
+++ b/resources/sass/frontend/framework/sizing/width.sass
@@ -5,7 +5,7 @@
         width: #{$width * $step}
 
 +breakpoints(w-screen)
-    width: 100vh
+    width: 100vw
 
 +breakpoints(w-full)
     width: 100%
